@@ -4006,4 +4006,7 @@ Subject length lower bound = 1
       123abcáyzabcdef789abcሴqr
  4: 123abc<>\x{e1}yzabc<><def>789abc<>\x{1234}qr
 
+/[^\xff]((?1))/utf,debug
+Failed: error 140 at offset 11: recursion could loop indefinitely
+
 # End of testinput5 
